welcome.lessons.welcome.array.array123.Array123.scala.error
array123:2: error: ';' expected but '=' found.
	nb1:Boolean=false
                   ^array123:3: error: ';' expected but '=' found.
	nb2:Boolean=false
                   ^array123:4: error: ';' expected but '=' found.
	nb3:Boolean=false
                   ^