welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
	nb1:Boolean=false
	nb2:Boolean=false
	nb3:Boolean=false
	for (i<-0 to nums.length-1) {
		if (nums(i)==1) {
			nb1=true
		} else if (nums(i)==2) {
			nb2=true
		} else if(nums(i)==3) {
			nb3=true
		}
	}
	if (nb1==true && nb2==true && nb3==true) {
	return true
}
return false
}
